@@ -1,3 +1,9 @@
+2008-05-31  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/tek.trm src/term.h:  Revise the list of default terminals.
+	New addition to default build: dpu414
+	Omit from default build: ai msdos/kermit selanar
+
 2008-05-31  Thomas Sefzick <thse@users.sourceforge.net>
 
 	* term/epson.trm:  Add support for the Seiko DPU-414 thermal printer
